Update Dockerfile and package.json to use Cloudflare sandbox version 0.3.2; remove unused migration class from wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -115,8 +115,7 @@
 	"migrations": [
 		{
 			"new_sqlite_classes": [
-				"CodeGeneratorAgent",
-				"UserAppSandboxService"
+				"CodeGeneratorAgent"
 			],
 			"tag": "v1"
 		},
