--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 	},
 	"dependencies": {
 		"@cloudflare/containers": "^0.0.25",
-		"@cloudflare/sandbox": "0.1.3",
+		"@cloudflare/sandbox": "^0.3.2",
 		"@noble/ciphers": "^1.3.0",
 		"@octokit/rest": "^22.0.0",
 		"@radix-ui/react-accordion": "^1.2.12",
